<resources>
    <string name="app_name">CustomView</string>
    <string name="title_activity_number_input_view">NumberInputView</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_0">0</string>
    <string name="todo">Delete</string>
    <string name="title_activity_drag">DragActivity</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_step1">Animations with Motion Layout</string>
    <string name="title_activity_step2">Animating with drag events</string>
    <string name="star">Star</string>
    <string name="credits">Virginia P @ Google</string>
    <string name="title_activity_step3">Modifying a path</string>
    <string name="step_3_modifying_animations">Step 3: Modifying a path</string>
    <string name="pinwheel_galaxy">Pinwheel galaxy</string>
    <string name="title_activity_step4">Building complex paths</string>
    <string name="title_activity_step5">Changing attributes during motion</string>
    <string name="title_activity_step6">Changing custom attributes</string>
    <string name="title_activity_step7">OnSwipe with complex paths</string>
    <string name="swipe_towards_the_right">Swipe towards the right</string>
    <string name="long_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Proin nibh nisl condimentum id venenatis a. Est placerat in egestas erat imperdiet sed. Ut lectus arcu bibendum at varius. Purus in mollis nunc sed id semper risus in hendrerit. Volutpat est velit egestas dui. Id diam vel quam elementum pulvinar etiam non. Tristique magna sit amet purus gravida quis blandit. Gravida in fermentum et sollicitudin ac orci. Sed augue lacus viverra vitae congue eu. Sapien nec sagittis aliquam malesuada bibendum. Tortor aliquam nulla facilisi cras fermentum odio. Egestas sed tempus urna et pharetra pharetra massa. Amet purus gravida quis blandit. Orci a scelerisque purus semper eget duis at tellus.

    Volutpat lacus laoreet non curabitur. Urna cursus eget nunc scelerisque viverra mauris. Turpis massa sed elementum tempus egestas sed sed risus pretium. Quam nulla porttitor massa id neque aliquam. Tempus quam pellentesque nec nam aliquam sem et. Ut eu sem integer vitae justo. Commodo sed egestas egestas fringilla phasellus faucibus scelerisque eleifend donec. Cras fermentum odio eu feugiat pretium nibh ipsum. Posuere morbi leo urna molestie at elementum eu facilisis sed. Augue eget arcu dictum varius duis at. Lacinia at quis risus sed vulputate odio. Massa tincidunt dui ut ornare.

    Auctor augue mauris augue neque gravida in fermentum et. Varius vel pharetra vel turpis nunc eget. Condimentum mattis pellentesque id nibh tortor id aliquet. In massa tempor nec feugiat nisl pretium fusce. Dolor sed viverra ipsum nunc aliquet bibendum. Potenti nullam ac tortor vitae purus faucibus ornare suspendisse sed. Mauris a diam maecenas sed. Tortor aliquam nulla facilisi cras fermentum. Mattis rhoncus urna neque viverra. Dui sapien eget mi proin sed. In dictum non consectetur a. Eu consequat ac felis donec et odio pellentesque. Eget egestas purus viverra accumsan in nisl. Dui nunc mattis enim ut tellus elementum. Lobortis elementum nibh tellus molestie nunc non. Nisi porta lorem mollis aliquam ut porttitor leo a diam. Pulvinar mattis nunc sed blandit libero volutpat sed. Ut faucibus pulvinar elementum integer.

    Scelerisque varius morbi enim nunc faucibus a pellentesque. Scelerisque in dictum non consectetur a erat nam at lectus. Sed euismod nisi porta lorem mollis aliquam. Nunc mi ipsum faucibus vitae aliquet. Nibh cras pulvinar mattis nunc. Sed viverra tellus in hac habitasse platea. Ac tortor vitae purus faucibus ornare. Laoreet sit amet cursus sit amet dictum sit amet. Risus sed vulputate odio ut enim. Massa sapien faucibus et molestie ac feugiat sed. Proin libero nunc consequat interdum varius sit amet mattis vulputate. Eget sit amet tellus cras adipiscing enim eu. Ullamcorper dignissim cras tincidunt lobortis feugiat. Arcu ac tortor dignissim convallis aenean et tortor at. Aliquet risus feugiat in ante metus. Sit amet luctus venenatis lectus magna. Egestas maecenas pharetra convallis posuere morbi leo. Auctor neque vitae tempus quam pellentesque nec nam aliquam sem.

        Ac orci phasellus egestas tellus rutrum tellus. Ultrices neque ornare aenean euismod elementum nisi quis. Vel pharetra vel turpis nunc eget. Quis lectus nulla at volutpat diam ut venenatis tellus in. Egestas congue quisque egestas diam in arcu. Tincidunt praesent semper feugiat nibh sed pulvinar. Tristique senectus et netus et malesuada fames. Tristique nulla aliquet enim tortor. Aliquet nibh praesent tristique magna sit amet purus. Diam maecenas ultricies mi eget mauris pharetra et ultrices neque. Morbi tristique senectus et netus et malesuada. Venenatis tellus in metus vulputate eu scelerisque felis. Risus pretium quam vulputate dignissim suspendisse in. Ut venenatis tellus in metus vulputate. Turpis in eu mi bibendum. Pellentesque elit eget gravida cum sociis natoque. Tristique risus nec feugiat in fermentum posuere urna. Senectus et netus et malesuada fames ac turpis.</string>
    <string name="title_activity_step7_completed">Complex motion with KeyFrames</string>
    <string name="title_activity_step8">Running motion with code</string>
    <string name="moon">Moon</string>
    <string name="mine_user_empty_username">请填写用户名</string>
    <string name="mine_user_empty_introduce">写下你对世界想说的话，就现在</string>
    <string name="mine_to_download">扫一扫下载，长按保存</string>
    <string name="mine_sign_name">签到</string>
    <string name="mine_sing_successive_default">已连续签到--天</string>
    <string name="mine_question">提问</string>
    <string name="mine_answer">回答</string>
    <string name="mine_reply_to_comment">评论</string>
    <string name="mine_praise">获赞</string>
    <string name="mine_number_default">--</string>
    <string name="mine_show_schedule_first_launch">启动APP时最先显示课表页面</string>
    <string name="mine_custom_icon">自定义桌面小图标</string>
    <string name="mine_feedback_suggestion">意见与反馈</string>
    <string name="mine_security">账号与安全</string>
    <string name="mine_about_redrock">红岩网校</string>
    <string name="mine_about">关于掌邮</string>
    <string name="mine_exit">退出登录</string>
    <string name="mine_login_now">马上登录</string>
    <string name="mine_logout_title">退出登录</string>
    <string name="mine_logout_content">是否退出当前账号？</string>
    <string name="mine_dynamic">动态</string>
    <string name="mine_nickname">昵称</string>
    <string name="mine_nickname_default">输入您的昵称</string>
    <string name="mine_introduce">个性签名</string>
    <string name="mine_introduce_default">输入个性签名</string>
    <string name="mine_qq">QQ</string>
    <string name="mine_phone">电话</string>
    <string name="mine_college">学院</string>
    <string name="mine_info_default">完善你的个人信息哦</string>
    <string name="mine_info_save">已保存</string>
    <string name="mine_info_contact">写下您的联系方式，便于我们与您联系</string>
    <string name="mine_exit_edit">退出编辑</string>
    <string name="mine_exit_edit_quest">你的资料还未保存，是否退出？</string>
    <string name="mine_sign_to_sign">签到</string>
    <string name="mine_sign_mon">周一</string>
    <string name="mine_sign_tue">周二</string>
    <string name="mine_sign_wed">周三</string>
    <string name="mine_sign_thurs">周四</string>
    <string name="mine_sign_fri">周五</string>
    <string name="mine_sign_sat">周六</string>
    <string name="mine_sign_sun">周日</string>
    <string name="mine_sign_year_default">2019-2020</string>
    <string name="mine_sign_week_default">上学期第--周</string>
    <string name="mine_sign_serialDays_default">已连续打卡--天</string>
    <string name="mine_sign_ranking_default">还没有打卡哦</string>
    <string name="mine_sign_ranking_percentage_default">超过--%的邮子</string>
    <string name="mine_sign_week_integral">10积分</string>
    <string name="mine_sign_store_integral_default">--</string>
    <string name="mine_sign_store_my_product">我的商品</string>
    <string name="mine_sign_store_item_exchange">兑换</string>
    <string name="mine_sign_store_item_exchange_for_sure">商品兑换</string>
    <string name="mine_my_product_time_pre">兑换时间：</string>
    <string name="mine_my_product">商品领取</string>
    <string name="mine_my_product_unclaimed">如果是实体商品，请携带有效证件前往红岩网校工作站B区领取奖品</string>
    <string name="mine_my_product_claimed">商品已经领了哟，继续攒积分兑换更多奖品吧</string>
    <string name="mine_draft_delete_success">删除成功</string>
    <string name="mine_draft_delete_failed">删除失败</string>
    <string name="mine_comment_at_start">你评论了 </string>
    <string name="mine_comment_at_end"> 的回答</string>
    <string name="mine_comment_received_at_end"> 评论了你的回答</string>
    <string name="mine_about_sharing">分享</string>
    <string name="mine_about_function_intro">功能介绍</string>
    <string name="mine_about_website">产品官网</string>
    <string name="mine_about_legal">《掌上重邮用户使用条款》</string>
    <string name="mine_about_update">版本更新</string>
    <string name="mine_about_1">红岩网校工作站出品</string>
    <string name="mine_about_copyright">CopyRight © 2015&#8211;2020 All Rights Reserved</string>
    <string name="mine_sign_store_back">store back</string>
    <string name="mine_security_change_pass_word_hint">重设密码</string>
    <string name="mine_security_forget_pass_word_hint">请输入学号</string>
    <string name="mine_security_change_pass_word">修改密码</string>
    <string name="mine_security_change_secret_security">修改密保</string>
    <string name="mine_security_change_binding_mail">修改绑定邮箱</string>
    <string name="mine_security_dialog_tip">温馨提示</string>
    <string name="mine_security_please_input_password">请再输入6–16位新密码</string>
    <string name="mine_security_forget_password">忘记密码？</string>
    <string name="mine_security_next">下一步</string>
    <string name="mine_security_your_password_protect_question">你的保密问题是：</string>
    <string name="mine_security_sel_question">选择一个密保问题</string>
    <string name="mine_security_answer_to_question">你的问题的回答是</string>
    <string name="mine_security_your_best_friend_name"> </string>
    <string name="mine_security_confirm">确定</string>
    <string name="mine_security_bind_email">绑定邮箱</string>
    <string name="mine_security_type_in_email_address">请输入邮箱地址：</string>
    <string name="mine_security_type_in_old_password">请输入旧密码</string>
    <string name="mine_security_resend">重新发送</string>
    <string name="mine_security_please_type_correct_address">请输入正确的邮箱地址</string>
    <string name="mine_security_please_type_new_words">请输入6–16位新密码</string>
    <string name="mine_security_change_password">修改密码</string>
    <string name="mine_security_new_password_incorrect">新密码不符合要求，请重新输入</string>
    <string name="mine_security_retype">确认密码和新密码不符，请重新输入</string>
    <string name="mine_security_bind_email_next">下一步</string>
    <string name="mine_security_bind_email_sent_to_your_email">已向你的邮箱发送了一条验证码</string>
    <string name="mine_security_bind_email_bind_succeed">验证成功</string>
</resources>