<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NumberInputView"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_margin="5dp">
        <TextView
            android:id="@+id/num_1"
            style="@style/NumberInput"
            android:text="@string/_1"
            android:textStyle="bold">
        </TextView>
        <TextView
            android:id="@+id/num_2"
            style="@style/NumberInput"
            android:text="@string/_2"
            android:textStyle="bold">
        </TextView>
        <TextView
            android:id="@+id/num_3"
            style="@style/NumberInput"
            android:text="@string/_3"
            android:textStyle="bold">
        </TextView>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_margin="5dp">
        <TextView
            android:id="@+id/num_4"
            style="@style/NumberInput"
            android:text="@string/_4"
            android:textStyle="bold">
        </TextView>
        <TextView
            android:id="@+id/num_5"
            style="@style/NumberInput"
            android:text="@string/_5"
            android:textStyle="bold">
        </TextView>
        <TextView
            android:id="@+id/num_6"
            style="@style/NumberInput"
            android:text="@string/_6"
            android:textStyle="bold">
        </TextView>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_margin="5dp">
        <TextView
            android:id="@+id/num_7"
            style="@style/NumberInput"
            android:text="@string/_7"
            android:textStyle="bold">
        </TextView>
        <TextView
            android:id="@+id/num_8"
            style="@style/NumberInput"
            android:text="@string/_8"
            android:textStyle="bold">
        </TextView>
        <TextView
            android:id="@+id/num_9"
            style="@style/NumberInput"
            android:text="@string/_9"
            android:textStyle="bold">
        </TextView>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_margin="5dp">
        <TextView
            android:id="@+id/num_0"
            style="@style/NumberInput"
            android:text="@string/_0"
            android:textStyle="bold">
        </TextView>

        <ImageView
            android:id="@+id/delete"
            android:src="@drawable/delete"
            android:layout_width="0dp"
            android:scaleType="center"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="2"
            android:background="@drawable/selector_num_key_pad"
            android:clickable="true"
            android:contentDescription="@string/todo"
            ></ImageView>
    </LinearLayout>
</LinearLayout>